--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
 
     <string name="app_name">PCSC remote TEST</string>
     <string name="action_settings">Settings</string>
-    <string name="runText">Run</string>
+    <string name="runText">Send APDUs\nto the card</string>
+    <string name="connectText">Connect to\nservice</string>
     <string name="SpringCard">SpringCard</string>
     <string name="ATR">ATR :</string>
     <string name="SpringCardPCSCsrv_name">SpringCard PCSC service</string>
